--- a/train.ipynb
+++ b/train.ipynb
@@ -780,6 +780,34 @@
      "text": [
       "  0%|          | 1/250 [00:00<01:50,  2.24it/s]"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pred_masks_shape': (2, 1, 256, 256), 'gt_masks_shape': (2, 1, 256, 256)}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 250/250 [00:53<00:00,  4.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 0 | mean loss: 0.1162\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 90%|█████████ | 226/250 [00:48<00:05,  4.69it/s]"
+     ]
     }
    ],
    "source": [
